# vignetting_correction

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  vignetting.ipynb
src/vignetting/: __init__.py  vignetting.py
vignetting/: __init__.py  vignetting.py
