[metadata]
name = Vignetting
version = 1.0.0
author = Li0nMo0se, Cika
author_email = ilan.guenet@epita.fr
description = Vignetting correction
long_description = file: README.md
url = https://github.com/Li0nMo0se/vignetting_correction
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src