[metadata]
name=vignetting
version=1.2.0
author=Li0nMo0se,Cika
author_email=ilan.guenet@epita.fr
description=Vignetting correction
long_description= file: README.md
long_description_content_type=text/markdown
url=https://github.com/Li0nMo0se/vignetting_correction
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    wheel
    setuptools
    numpy
    scipy

[options.packages.find]
where = src